# bel_resources

./: .bumpversion.cfg  .editorconfig  .gitignore  CONTRIBUTING.rst  Makefile  Pipfile  README.md  README.rst  SCHEM_belns.jsonl  TODO.md  belbio_conf.yaml.example  belbio_conf.yml.example  docker-compose.yml  logging-conf.yaml  namespaces.yaml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.sh  utils.py
app/: __version__.py  settings.py  utils.py
app/backbone/: gene2protein.py
app/common/: collect_sources.py  resources.py  text.py
app/namespaces/: README.pubchem  SCHEM_equivalences.py  SCOMP_equivalences.py  TEMPLATE.py  chebi.py  chembl.py  do.py  eg.py  go.py  hgnc.py  mesh.py  mgi.py  migrate_openbel_namespaces.py  openbel_annotations.py  openbel_namespaces.py  openbel_update.py  pubchem.py.TODO  rgd.py  sp.py  tax.py  tmp.sh  virtuals.py  zfin.py
app/nanopubs/: SFAM_family_members.py
app/orthologs/: eg.py  hgnc.py.TODO  rgd.py.TODO
app/schemas/: main.py
docs/: index.md
docs/source/: changelog.rst  conf.py  devops.rst  (+3 more)
load/: create_indexes.js  load.sh  load_arango.py  load_es.py
orthologs/: README.md  eg.py  hgnc.py  rgd.py
resources/: namespaces.yml  taxonomy_labels.yml
taxonomy/: README.md  taxonomy.py
terms/: affymetrix.py  chebi.py  chembl.notes.adoc  chembl.py  do.py  entrez-gene.py  go.py  hgnc.py  lipidmaps.openbel-example.py.hold  mesh.py  mgi.py  openbel_annotations.py  openbel_namespaces.py  rgd.py  swissprot.py  taxonomy.py  uniprot-human-diseases.py
tests/: test_config.py
tools/: __version__.py  setup_logging.py
(+46 files in other folders)
